# cpp-build-artifacts

./: .clangd  .gitignore  CMakeLists.txt  build.sh  lib.cpp  lib.h  main.cpp
foo/: CMakeLists.txt  lib.cpp  lib.h
